Stop using spacing override class
- we (the GOV.UK frontenders) decided recently that override classes like govuk-!-margin-bottom-9 should only be used as overrides when they were necessary (such as when dealing with legacy code). In situations like this, we should write a custom class that makes use of the govuk-frontend spacing scale
- I forgot. Sorry.

--- a/app/assets/stylesheets/views/_simple-smart-answer.scss
+++ b/app/assets/stylesheets/views/_simple-smart-answer.scss
@@ -2,3 +2,7 @@
   @include govuk-font(19);
   margin-bottom: govuk-spacing(2);
 }
+
+.your-answers {
+  margin-bottom: govuk-spacing(9);
+}
